force-app/main/default/objects/Five9__Five9ReportFieldMapping__c/Five9__Five9ReportFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Five9ReportFieldMapping</label>
</CustomObject>