force-app/main/default/objects/Five9__Five9ReportFieldMapping__c/fields/Five9__default__c.field-meta.xml
<CustomField>
    <fullName>Five9__default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>default</label>
    <type>Checkbox</type>
</CustomField>