force-app/main/default/objects/Five9__Five9ReportFieldMapping__c/fields/Five9__report_field_name__c.field-meta.xml
<CustomField>
    <fullName>Five9__report_field_name__c</fullName>
    <label>report_field_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>